k8s/overlays/sticky-demo/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo
spec:
  replicas: 3
